--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -93,7 +93,7 @@
 
                 </div>
                 <div style="display: flex; flex-direction: row; justify-content: space-between;align-items: center">
-                    <button (click)="changeSummaryList('new names')" mat-raised-button
+                    <button (click)="changeSummaryList('New Names')" mat-raised-button
                         style="margin-right: 5px;background-color: white;color:black">New
                         Names</button>
                     <button (click)="changeSummaryList('chart')" mat-mini-fab
@@ -160,13 +160,13 @@
             <div class="singleNameSlide">
 
                 <div class="nameContainer">
-                    <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">{{category}}</div>
+                    <div [style.font-family]="font2" [style.font-size]="'30px'" class="item1">{{category}}</div>
                     <div class="testName" [style.font-family]="font2" Comirnaty
                         [style.font-size]="(font2==='coture')?'117px':'190px'" [innerHTML]="testName">
 
                     </div>
                     <!-- <div [style.font-family]="font3" [style.font-size]="'30px'" class="pronounciation">comir-nati</div> -->
-                    <div [style.font-family]="font4" [style.font-size]="'35px'"
+                    <div [style.font-family]="font2" [style.font-size]="'35px'"
                         style="text-align: center;line-height: 40px;" class="rationale">{{rationale}}
                     </div>
                 </div>
