--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -66,7 +66,7 @@
         // font-size: 140px;
         margin-top: -138px;
         color: darkblue;
-        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        // text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
         box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
     .pronounciation {
