--- a/src/app/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx-creator/bmx-creator.component.scss
@@ -1211,3 +1211,10 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     width: max-content;
     text-align: center;
 }
+
+.selectLabels {
+    padding-left: 1rem;
+    flex: 0.3 0 0;
+}
+
+
