--- a/src/app/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx-creator/bmx-creator.component.html
@@ -94,20 +94,101 @@
 
     <!-- PROJECT LIST-->
     <div class="project-list" *ngIf="isMenuActive1" style="border: hotpink solid 1px; width: 60%; height: 100vh;">
-        PROJECT LIST
+        <div>
+            PROJECT LIST
+            <mat-form-field appearance="fill" style="border-radius: 0px" >
+                <mat-label>Current Selection</mat-label>
+                <mat-select [(value)]="selected" (selectionChange)="changeView()">
+                    <mat-option value="Live">Live</mat-option>
+                    <mat-option value="Closed">Closed</mat-option>
+                    <mat-option value="All">All</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field style="float:right; padding-right: 20px">
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+            </mat-form-field>
+        </div>
+        <div>
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 100%;">
+                <!-- Position Column -->
+                <ng-container matColumnDef="Client">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Client</th>
+                    <td mat-cell *matCellDef="let element"> {{element.Client}} </td>
+                </ng-container>
+                <ng-container matColumnDef="ProjectName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.ProjectName}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Department">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Department </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Department}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Office">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Office </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Office}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Created">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Created}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Close">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Close </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Close}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Email">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-icon-button color="primary" aria-label="Example icon button with a home icon" (click)="sendEmail(element.ProjectId)">
+                            <mat-icon>email</mat-icon>
+                          </button>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="Edit">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-icon-button color="green" aria-label="Example icon button with a home icon" (click)="editBM(element.ProjectId)">
+                            <mat-icon>build</mat-icon>
+                          </button>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="Delete">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-icon-button color="warn" aria-label="Example icon button with a home icon" (click)="deleteBM(element.ProjectId)">
+                            <mat-icon>delete</mat-icon>
+                          </button>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 6613]" showFirstLastButtons></mat-paginator>
+        </div>
     </div>
     <div class="project-list" *ngIf="isMenuActive1" style="border: pink solid 1px; width: 25%; height: 100vh;">
-        side panel 1</div>
+        side panel 1
+        <div style="width: 100%;">
+            <mat-card class="demo-inline-calendar-card">
+                <mat-calendar (selectedChange)="selected = $event"></mat-calendar>
+              </mat-card>
+        </div>
+        
+    </div>
     <!--END  PROJECT LIST-->
 
     <!-- OPEN LINKS-->
-    <div class="open-links" *ngIf="isMenuActive2" style="border: hotpink solid 1px; width: 60%; height: 100vh;">OPEN LINKS</div>
-    <div class="open-links" *ngIf="isMenuActive2" style="border: pink solid 1px; width: 25%; height: 100vh;">side panel 2</div>
+    <div class="open-links" *ngIf="isMenuActive2" style="border: hotpink solid 1px; width: 60%; height: 100vh;">OPEN
+        LINKS</div>
+    <div class="open-links" *ngIf="isMenuActive2" style="border: pink solid 1px; width: 25%; height: 100vh;">side panel
+        2</div>
     <!--END OPEN LINKS-->
 
     <!-- MATRIX INVITES -->
-    <div class="matrix-invites" *ngIf="isMenuActive3" style="border: hotpink solid 1px; width: 60%; height: 100vh;">MATRIX INVITES</div>
-    <div class="matrix-invites" *ngIf="isMenuActive3" style="border: pink solid 1px; width: 25%; height: 100vh;">side panel 3</div>
+    <div class="matrix-invites" *ngIf="isMenuActive3" style="border: hotpink solid 1px; width: 60%; height: 100vh;">
+        MATRIX INVITES</div>
+    <div class="matrix-invites" *ngIf="isMenuActive3" style="border: pink solid 1px; width: 25%; height: 100vh;">side
+        panel 3</div>
     <!--END MATRIX INVITES -->
 
     <!-- CREATE/EDIT COMPONENT  🧠-->
@@ -236,11 +317,15 @@
     <!--🧠 END CREATE/EDIT COMPONENT-->
 
     <!-- REPORTS -->
-    <div class="reports" *ngIf="isMenuActive5" style="border: hotpink solid 1px; width: 60%; height: 100vh;">REPORTS</div>
-    <div class="reports" *ngIf="isMenuActive5" div style="border: pink solid 1px; width: 25%; height: 100vh;">SIDE PANEL5</div>
+    <div class="reports" *ngIf="isMenuActive5" style="border: hotpink solid 1px; width: 60%; height: 100vh;">REPORTS
+    </div>
+    <div class="reports" *ngIf="isMenuActive5" div style="border: pink solid 1px; width: 25%; height: 100vh;">SIDE
+        PANEL5</div>
     <!--END REPORTS -->
     <!-- SETTINGS -->
-    <div class="settings" *ngIf="isMenuActive6" style="border: hotpink solid 1px; width: 60%; height: 100vh;">SETTINGS</div>
-    <div class="settings" *ngIf="isMenuActive6" div style="border: pink solid 1px; width: 25%; height: 100vh;">SIDE PANEL 6</div>
+    <div class="settings" *ngIf="isMenuActive6" style="border: hotpink solid 1px; width: 60%; height: 100vh;">SETTINGS
+    </div>
+    <div class="settings" *ngIf="isMenuActive6" div style="border: pink solid 1px; width: 25%; height: 100vh;">SIDE
+        PANEL 6</div>
     <!--END SETTINGS -->
 </div>
