--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,3 +85,6 @@ a {
 }
 @import '~animate.css/animate.min';
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
