new data wired for the project list

--- a/src/app/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx-creator/bmx-creator.component.scss
@@ -205,7 +205,7 @@
 }
 
 
-// *******************************************************************************************
+// END OF THE SCSS PROJECT *******************************************************************************************
 .mainContainerPresent {
     background-color: white;
     border: solid 5px darkgray;
